fix github action

--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
           run:
-            working-directory: './backend'
+            working-directory: '.'
         steps:
           - uses: actions/checkout@v3
             name: ✅ Checkout
@@ -30,8 +30,8 @@ jobs:
           - uses: docker/build-push-action@v2
             name: 🚀 Build and push
             with:
-              context: ./backend
-              file: ./backend/Dockerfile
+              context: .
+              file: ./Dockerfile
               platforms: linux/amd64
               push: true
               tags: |
